fix: add spacing under quotes

--- a/app/globals.css
+++ b/app/globals.css
@@ -81,3 +81,7 @@ h6 {
 .wp-content .wp-block-cover {
 	@apply mb-3;
 }
+
+.wp-block-quote {
+	@apply mb-3;
+}
